fixed links in html page

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -9,10 +9,10 @@
   <body>
     <h1>Zodiac API</h1>
     <ul>
-      <li><a href="/lib/controllers/zodiac.js">Zodiac List</a></li>
-      <li><a href="/lib/controllers/horoscopes/1">Aquarius</a></li>
+      <li><a href="/zodiacs">Zodiac List</a></li>
+      <li><a href="/zodiacs/1">Aquarius</a></li>
       <li>
-        <a href="/lib/controllers/horoscopes/aquarius">Aquarius Horoscope</a>
+        <a href="/horoscopes/aquarius">Aquarius Horoscope</a>
       </li>
     </ul>
   </body>
